--- a/src/Pages/Login/login.module.css
+++ b/src/Pages/Login/login.module.css
@@ -1,10 +1,11 @@
 .container {
-  height: calc(100vh - 100px);
+  height: calc(100vh - 80px);
   width: 100vw;
-  margin-top: 100px;
+  margin-top: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: white;
 }
 
 .card {
@@ -56,7 +57,7 @@
 }
 
 .container button {
-  background-color: rgb(94, 164, 255);
+  background-color: rgb(126, 182, 255);
   color: white;
   border: none;
   border-radius: 6px;
@@ -65,6 +66,11 @@
   font-weight: 600;
   margin-top: 30px;
   cursor: pointer;
+  transition-duration: 200ms;
+}
+
+.container button:hover {
+  background-color: rgb(40, 133, 255);
 }
 
 .container button:disabled {
