--- a/src/Pages/Login/login.module.css
+++ b/src/Pages/Login/login.module.css
@@ -88,3 +88,13 @@
   margin-top: 20px;
   font-size: 12px;
 }
+
+.inputs a {
+  color: blue;
+  font-size: 12px;
+  font-weight: 600;
+  margin-top: 20px;
+  display: block;
+  text-align: center;
+  cursor: pointer;
+}
